<resources>
    <string name="app_name">KhetiHisab</string>

    <!--Fragment Crop List-->
    <string name="str_expenses">Expenses</string>
    <string name="str_income">Income</string>
    <string name="button_add_new_crop">Add Crop</string>

    <!--Fragment Add Crop-->
    <string name="button_save">Save Crop</string>
    <string name="hint_crop_name">Crop Name</string>
    <string name="hint_start_date">Start Date of Crop</string>

    <!--Add/Update Transaction-->
    <string name="str_amount">Amount</string>
    <string name="str_exp">Expense</string>
    <string name="str_inc">Income</string>
    <string name="str_cat">Category</string>
    <string name="str_note">Note</string>
    <string name="str_status">Status</string>
    <string name="str_paid">Paid</string>
    <string name="str_unpaid">Unpaid</string>
    <string name="str_date">Date</string>
    <string name="str_amount_issue">Please enter the amount</string>
    <string name="str_note_issue">Please enter the note</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_crop">Crops</string>
    <string name="nav_categories">Categories</string>
    <string name="btn_add_category">Add Category</string>
    <string name="btn_add_crop">Add Crop</string>
    <string name="btn_save">Save</string>
    <string name="str_farmer_name">Farmer Name</string>
    <string name="str_land_used_for_crop">Land Used for Crop</string>
    <string name="hint_completion_date_of_crop">Completion Date of Crop</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="str_pnl"><![CDATA[P&L]]></string>


</resources>
